--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	  <p class="animated slideInLeft" id="home3">With a strong passion for learning!</p>
 
     <a href="contact.html">
-    <i id="contactform" class="fa fa-paper-plane fa-4x animated rollIn" aria-hidden="true";> Contact me here!</i></a>
+    <i id="contactform" class="fa fa-paper-plane fa-2x animated rollIn" aria-hidden="true";> Contact me here!</i></a>
 
 		  </div>
 
@@ -92,24 +92,26 @@
                         <span class="label">HTML5</span></div>
                         <div class="bar cf" data-percent="90%">
                           <span class="label light">CSS3</span></div>
+			       <div class="bar cf" data-percent="40%">
+                          <span class="label light">SEO implementation</span></div>
                           <div class="bar cf" data-percent="65%">
                             <span class="label">Jquery</span></div>
                             <div class="bar cf" data-percent="70%">
                               <span class="label light">Javascript</span></div>
-                              <div class="bar cf" data-percent="40%">
-                                <span class="label">Mongo</span></div>
+                              <div class="bar cf" data-percent="30%">
+                                <span class="label">MongoDb</span></div>
                                 <div class="bar cf" data-percent="40%">
                                   <span class="label light">Node</span></div>
                                   <div class="bar cf" data-percent="60%">
-                                    <span class="label light">React</span></div>
+                                    <span class="label light">React/Redux</span></div>
                                     <div class="bar cf" data-percent="30%">
                                       <span class="label">PHP</span></div>
-                                      <div class="bar cf" data-percent="60%">
+                                      <div class="bar cf" data-percent="30%">
                                         <span class="label light">Express</span></div>
                                         <div class="bar cf" data-percent="80%">
                                           <span class="label">Front End</span>
                                         </div>
-                                        <div class="bar cf" data-percent="60%">
+                                        <div class="bar cf" data-percent="50%">
                                           <span class="label">Back End</span>
                                         </div>
                                       </div>
@@ -169,7 +171,7 @@
       <a href="https://aqueous-journey-66196.herokuapp.com/">
         <img src="screencapture-aqueous-journey-66196-herokuapp-1483996263410.png" alt="Blog site" style="width:100%">
         <div class="caption">
-          <p style="text-decoration:none text-align:center;">Lorem ipsum...</p>
+          <p style="text-decoration:none text-align:center;">Mock Blog Site</p>
         </div>
       </a>
 
