--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
 
                       <div class="wrap col-lg-6">
   <h1 style="text-decoration:underline;">Skills</h1>
-                        <div class="bar cf" data-percent="80%">
-                          <span class="label">Bootstrap</span>
+                        <div class="bar cf" data-percent="100%">
+                          <span class="label">HTML5</span>
                         </div>
-                        <div class="bar cf" data-percent="70%">
-                          <span class="label">Photoshop</span>
+                        <div class="bar cf" data-percent="80%">
+                          <span class="label">CSS3</span>
                         </div>
                       <div class="holder"><div class="bar cf" data-percent="100%">
-                        <span class="label">HTML5</span></div>
-                        <div class="bar cf" data-percent="90%">
-                          <span class="label light">CSS3</span></div>
+                        <span class="label">Twitter Bootstrap</span></div>
+                        <div class="bar cf" data-percent="70%">
+                          <span class="label light">Photoshop cc</span></div>
 			       <div class="bar cf" data-percent="40%">
                           <span class="label light">SEO implementation</span></div>
                           <div class="bar cf" data-percent="65%">
