--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		 <script src="https://use.fontawesome.com/73276a1672.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Coiny|Lobster|Passion+One|Prociono" rel="stylesheet">
 
-<script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.7.2.js"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.7.2.js"></script>
 
 
   </head>
@@ -44,7 +44,7 @@
 
 <div id="section1" class="socicons" style = "text-align: center;">
       <a href="https://www.facebook.com/oldmansloane">
-        <i class="fa fa-facebook-square fa-3x " aria-hidden="true "></i></a>
+        <i class="fa fa-facebook-square fa-2x " aria-hidden="true "></i></a>
 
         <a href="https://twitter.com/oldmansloane ">
               <i class="fa fa-twitter fa-2x " aria-hidden="true "></i></a>
