--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
         dive into the world of web development and hope to get the opportunity to
         make my beloved hobby my living!
 </p>
+<h4 style="font-family:'Lobster', sans-serif; text-align:center;">PS: I also was a butcher and cook for several years, so I can make you a nice
+steak dinner</h4>
 </div>
       </div>
 </div>
