--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                       <div id="aboutbox" class="animated" >
 
                       <div class="wrap col-lg-6">
-  <h1 style="text-decoration:underline;">Skills</h1>
+  <h1 style="text-decoration: underline;">Skills</h1>
                         <div class="bar cf" data-percent="100%">
                           <span class="label">HTML5</span>
                         </div>
@@ -93,7 +93,7 @@
                         <div class="bar cf" data-percent="70%">
                           <span class="label light">Photoshop cc</span></div>
 			       <div class="bar cf" data-percent="40%">
-                          <span class="label light">SEO implementation</span></div>
+                          <span class="label light">SEO</span></div>
                           <div class="bar cf" data-percent="65%">
                             <span class="label">Jquery</span></div>
                             <div class="bar cf" data-percent="70%">
@@ -114,6 +114,7 @@
                                         <div class="bar cf" data-percent="50%">
                                           <span class="label">Back End</span>
                                         </div>
+			      <h4 style="font-family:'Lobster', sans-serif; text-align:center;">Based on what I've learnt on my own, not with the help of a great team!</h4>
                                       </div>
                         </div>
                         <div class="col-md-6">
