Initial dist subtree commit

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -67,7 +67,7 @@
 	  <h3 class="animated slideInLeft" id="home3">With A Passion for Beautiful and Responsive Websites!</h3>
 
 <button type="button" class="js-menu-trigger sliding-panel-button">
-  Click for Sliding Panel
+  Press Here To Contact Me!
 </button>
 
 <nav class="js-menu sliding-panel-content">
