--- a/index.html
+++ b/index.html
@@ -9,17 +9,12 @@
     integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
     crossorigin="anonymous"></script>
 
-	 	 <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/libs/modernizr-2.6.2.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-		  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-		  crossorigin="anonymous">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+<link rel="stylesheet" href="assets/css/style.css">
+<script src="assets/js/libs/modernizr-2.6.2.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-		 <script src="https://use.fontawesome.com/73276a1672.js"></script>
+<script src="https://use.fontawesome.com/73276a1672.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Coiny|Lobster|Passion+One|Prociono" rel="stylesheet">
-
 <script src="https://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.7.2.js"></script>
 
 
@@ -29,7 +24,14 @@
 
 
 
-<div class="open ">
+<body>
+
+
+
+
+
+	  <section class="top">
+    <div class="open ">
   <span class="cls "></span>
   <span>
     <ul class="sub-menu ">
@@ -44,26 +46,20 @@
 
 <div class="socicons" style = "text-align: center;" id="section1">
       <a href="https://www.facebook.com/oldmansloane">
-        <i class="fa fa-facebook-square fa-2x " aria-hidden="true "></i></a>
+        <i class="fa fa-facebook-square fa-4x " aria-hidden="true "></i></a>
 
         <a href="https://twitter.com/oldmansloane ">
-              <i class="fa fa-twitter fa-2x " aria-hidden="true "></i></a>
+              <i class="fa fa-twitter fa-4x " aria-hidden="true "></i></a>
               <a href="http://codepen.io/sloane7568/">
-              <i class="fa fa-codepen fa-2x" aria-hidden="true"></i></a>
+              <i class="fa fa-codepen fa-4x" aria-hidden="true"></i></a>
               <a href="https://github.com/sloane1965">
-              <i class="fa fa-github-alt fa-2x" aria-hidden="true"></i></a>
+              <i class="fa fa-github-alt fa-4x" aria-hidden="true"></i></a>
               <a href="https://www.linkedin.com/in/michael-sloane-9019a1100">
-        <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i> </a>
+        <i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i> </a>
         </div>
-<body>
-
-
-
-
-	  <section class="top">
-
+<div class="container">
 	  <h1  class="animated slideInLeft">Hi I'm Sloane!</h2>
-	  <h2 class="animated slideInRight" id="home2">A Front End Web Developer From Upstate New York</h2>
+	  <h2 class="animated slideInRight" id="home2">A Front End Web Developer From <br> Upstate New York</h2>
 	  <h3 class="animated slideInLeft" id="home3">With A Passion for Beautiful and Responsive Websites!</h3>
 
 <button type="button" class="js-menu-trigger sliding-panel-button">
@@ -73,17 +69,17 @@
 <nav class="js-menu sliding-panel-content">
 <form action="https://formspree.io/oldmansloane@gmail.com" method="post">
 
-            <label for="first_name">first name</label>
+            <label for="first_name">First Name</label>
             <input type="text" name="first_name" placeholder="John" />
 
-            <label for="last_name">last name</label>
+            <label for="last_name">Last Name</label>
             <input type="text" name="last_name" placeholder="Smith" />
 
     <label for="email"><span class="req">Email*</span></label>
             <input type="email" name="email" placeholder="youremail@email.com" />
 
     <label for="comments">Message</label>
-          <textarea cols="46" rows="3" name="comments" type="text"></textarea>
+          <textarea name="comments" type="text"></textarea>
 
           <input class="btn btn-submit" type="submit" value="Submit" />
           <small>or press <strong>enter</strong></small>
@@ -99,22 +95,7 @@
 
 
   <section class="about" id="section2">
-        <ul id="work">
-          <li>Deevoted LLC.</li>
-          <li>February, 2017 - Current</li>
-          <li>Front End Development Intern</li>
-          <li>Spent working closely with President and Technical Director to expand my skillset, converting Photoshop Designs to HTML/SASS/Javascript, and learning how to develop in a local development environment with MacOSx and Ubuntu Server...the time spent here has greatly increased my experience, definitely more-so than the 2 years spent self teaching.</li>
-        </ul>
-        <div class="bar cf" data-percent="80%">
-          <span class="label">Front End</span>
-        </div>
-        <div class="bar cf" data-percent="70%">
-          <span class="label">Design</span>
-        </div>
-        <div class="bar cf" data-percent="50%">
-          <span class="label">Back End</span>
-        </div>
-        <ul class="box">
+          <ul class="box">
           <li>HTML5</li>
           <li>CSS3</li>
           <li>SASS</li>
@@ -138,9 +119,28 @@
           <li>SEO</li>
           <li>Responsive Design</li>
         </ul>
-        <p>Currently a junior front end developer, but I have a firm grasp on back end development, these skills can definitely be improved, but I love learning, and believe talking to another professional for a half hour can equate too a week of dedicated self-teaching! On top of symantically correct coding, I love making the process <em>FAST</em> I utilize tools such as Emmett, SASS, and Grunt to achieve this.  I am currently obsessed with React, and love building applications, but still enjoy building full websites, I do believe most of the time your entire statement can be stated in one beautiful responsive page.  I currently am a remote worker, and that is where I am most comfortable being, though I am not opposed to travel or meetings if need be.</p>
+
+        <ul id="work">
+          <li>Deevoted LLC.</li>
+          <li>February, 2017 - Current</li>
+          <li>Front End Development Intern</li>
+          <li id="workP">Spent working closely with President and Technical Director to expand my skillset, converting Photoshop Designs to HTML/SASS/Javascript, and learning how to develop in a local development environment with MacOSx and Ubuntu Local Development Server.</li>
+        </ul>
+                <p>Junior front end developer, with a firm grasp on back end concepts, these skills can be improved, but I love learning, and believe talking to another professional for a half hour can equate too a week of dedicated self-teaching! I love making the process <em>FAST</em> I utilize tools such as Emmett, SASS, and Grunt to achieve this.  I am currently learning React, Node, and Mongo, and love building applications, but still enjoy building full websites.  I currently am a remote worker, and I am very comfortable working indepedently, but also enjoy working with others!</p>
+        <div class="bar cf" data-percent="80%">
+          <span class="label">Front End</span>
+        </div>
+        <div class="bar cf" data-percent="70%">
+          <span class="label">Design</span>
+        </div>
+        <div class="bar cf" data-percent="50%">
+          <span class="label">Back End</span>
+        </div>
+   
+
 
   </section>
+
 
 
 
@@ -152,10 +152,10 @@
       <img src="assets/images/screencapture-salty-citadel-23140-herokuapp-1483556319013.png" alt="">
     </div>
     <div class="card-header">
-      Random Quote Generator
+     Youtube Clone
     </div>
     <div class="card-copy">
-      <p>A random quote generator using HTML, Javascript, API integration, and css.</p>
+      <p>A Youtube&trade; search clone app, using React, and the Youtube&trade;</p>
     </div>
   </div>
 </a>
@@ -165,10 +165,10 @@
       <img src="assets/images/screencapture-codepen-io-sloane7568-pen-amkPNb-1491669410245.png" alt="">
     </div>
     <div class="card-header">
-      Youtube Clone
+      Random Quote Generator 
     </div>
     <div class="card-copy">
-      <p>A Youtube&trade; search clone app, using React, and the Youtube&trade; API</p>
+      <p> A random quote generator using HTML, Javascript, API integration, and css. API</p>
     </div>
   </div>
 </a>
@@ -186,14 +186,14 @@
   </div>
   </a>
 </section>
-
+</div>
     <footer>
-      <div class="container">
+      <div>
         &copy2017 SloaneDevelopment, 518-248-7994
       </div>
     </footer>
 
-
+</body>
 
   <script>
 $(document).ready(function() {
