--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 <form action="https://formspree.io/oldmansloane@gmail.com" method="post">
 
             <label for="first_name">First Name</label>
-            <input type="text" name="first_name" placeholder="John" />
+            <input type="text" name="first_name" placeholder="John" /><br>
 
             <label for="last_name">Last Name</label>
-            <input type="text" name="last_name" placeholder="Smith" />
+            <input type="text" name="last_name" placeholder="Smith" /><br>
 
     <label for="email"><span class="req">Email*</span></label>
             <input type="email" name="email" placeholder="youremail@email.com" />
