--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div class="socicons" style = "text-align: center;" id="section1">
 
 
-        <a href="https://twitter.com/oldmansloane ">
+        <a href="https://twitter.com/woollyviking ">
               <i class="fa fa-twitter fa-4x " aria-hidden="true "></i></a>
               <a href="http://codepen.io/sloane7568/">
               <i class="fa fa-codepen fa-4x" aria-hidden="true"></i></a>
